--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://itsmisscs.me
+title: itsmisscs
+subtitle: A post a day
+author: Claudina Sarahe
 simple_search: http://google.com/search
-description:
+description: My daily blog for most things tech, startup, sass, compass topped with a cherry of personal because work is not a job
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -64,7 +64,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: itsmisscs
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
