--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 url: http://itsmisscs.me
 title: itsmisscs
-subtitle: A post a day
+subtitle: Musings about technology, Sass, Compass, NYC, and all things in between
 author: Claudina Sarahe
 simple_search: http://google.com/search
-description: My daily blog for most things tech, startup, sass, compass topped with a cherry of personal because work is not a job
+description: Writings, thoughts, opinions of Claudina Sarahe. Covering tech from entrepreneurship, startups, innovation, drupal, sass, compass. Born in New York City on the Lower East Side. 
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -45,23 +45,23 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/about.html, asides/recent_posts.html,  asides/twitter.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
 # blog_index_asides:
 # post_asides:
-# page_asides:
+page_asides: [asides/recent_posts.html,  asides/twitter.html, asides/github.html, asides/googleplus.html]
 
 # ----------------------- #
 #   3rd Party Settings    #
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: misscs
 github_repo_count: 0
 github_show_profile_link: true
-github_skip_forks: true
+github_skip_forks: false
 
 # Twitter
 twitter_user: itsmisscs
@@ -72,13 +72,13 @@ twitter_show_follower_count: false
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
-google_plus_one_size: medium
+google_plus_one: true
+google_plus_one_size: small
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
-googleplus_hidden: false
+googleplus_user: claudinasarahe
+googleplus_hidden: true
 
 # Pinboard
 pinboard_user:
@@ -89,11 +89,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: itsmisscs
+disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-30682942-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
