--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/about.html, asides/recent_posts.html,  asides/twitter.html]
+default_asides: [asides/about.html, asides/happenings.html, asides/recent_posts.html,  asides/twitter.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -65,7 +65,7 @@ github_skip_forks: false
 
 # Twitter
 twitter_user: itsmisscs
-twitter_tweet_count: 7
+twitter_tweet_count: 5
 twitter_show_replies: true
 twitter_follow_button: true
 twitter_show_follower_count: false
