--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://itsmisscs.me
+url: http://misscs.github.com
 title: itsmisscs
 subtitle: Musings about technology, Sass, Compass, NYC, and all things in between
 author: Claudina Sarahe
